<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main Screen -->
    <string name="app_name">UTAP</string>
    <string name="title">URI Treatment and Prevention in Oregon</string>
    <string name="action_settings">Settings</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="back_to_main">Back to Main</string>

    <!-- Tips Screen -->
    <string name="tips">Tips for Providers to Tell Patients</string>
    <string name="tips_resist">Antibiotic Resistance</string>
    <string name="tips_safety">Antibiotic Safety</string>
    <string name="tips_providers">What Providers Can Do</string>
    <string name="tips_patients">What Patients Can Do</string>

    <!-- Oregon AWARE/ Free CME Opportunities Screen -->
    <string name="aware">Oregon AWARE/ Free CME Opportunities</string>
    <string name="aware_description"> Oregon AWARE offers FREE CE/CME opportunities for Providers.
        Check out their descriptions below!</string>
    <string name="aware_intro">About AWARE:</string>
    <string name="aware_intro_content">The Oregon Alliance Working for
        Antibiotic Resistance Education. \n\n
        Our mission: To encourage the appropriate use of antibiotics to reduce
        the problem of antibiotic resistant bacteria in OR. \n\n
        We offer a variety of materials for Health Care Professionals, Health Educators,
        and Students to help them convey our message to the general public. \n\n
        This App highlights some of the resources available for Providers
        for treatment of their Adult Patients.  </string>
    <string name="aware_intro_link">public.health.oregon.gov/PreventionWellness/SafeLiving/AntibioticResistance/Pages/index.aspx</string>

    <string name="use_of_antibiotics">Judicious Use of Antibiotics</string>
    <string name="use_of_antibiotics_content"> Credit available from AMA-PRA, AAFP,
        Oregon Board of Pharmacy for Physicians, PAs, nurses, and pharmacists. \n \n
	    41-page article with practice guidelines for acute otitis media, sinusitis, bronchitis,
        pharyngitis, community acquired pneumonia, and prevention of respiratory infections. \n \n
        CME is obtained when participants complete an evaluation
        form and score 75% or higher on the post-test. </string>
    <string name="use_of_antibiotics_link">https://public.health.oregon.gov/PreventionWellness/SafeLiving/AntibioticResistance/Pages/CE-CME-Credit-for-Health-Professionals.aspx</string>

    <string name="media">Otitis Media</string>
    <string name="media_content">Credits available through the Children’s Hospital of Pittsburg,
        Pediatrics Medical Education. \n\n
        Must create a login on the site in order to participate. \n\n
        CME provided to Physicians, Trainees, Educators, and other Health Professionals. \n\n
        Courses through the site that offer CME: Tympanometry and Acoustic Reflexometry;
        Diagnosis of Acute Otitis Media; Diagnosis of Acute Otitis Media with Effusion;
        Pneumatic Otoscopy. \n\n
        Each program takes 30-60 minutes to complete and may be done in multiple sessions. </string>
    <string name="media_link">http://pedsed.pitt.edu</string>

    <string name="tract_infections">Upper Respiratory Tract Infections</string>
    <string name="infection_content">Training developed by MARR Coalition and
        Wayne State University School of Medicine. \n\n
        Must create account/login information. \n\n
        Webinar outlining the appropriate antibiotics management of URIs
        focusing on antibiotic resistance, treatment guidelines, and patient satisfaction. </string>
    <string name="infection_link">http://www.semcme.org/semcme/rev2/cme/olt_CMEmain.wml</string>


    <string name="resistance">Antibiotic Resistance: Community Pharmacists Tip the Scale.</string>
    <string name="resistance_content">For Pharmacists, sponsored by the CDC,
        and accredited by the ACPE. \n\n\n
        1-hour continuing education course of 5 modules. \n\n </string>
    <string name="resistance_link">http://www.cdc.gov/getsmart/specific-groups/hcp/ce-course.html</string>

    <string name="antimicrobial">Antimicrobial Drug Use and Resistance in Europe</string>
    <string name="antimicrobial_content">Course offered through the Emerging Infectious Diseases
        Journal with CE credits provided by Medscape, LLC. \n\n\n
        Read a journal article and taking a post-test,
        as well as completing an evaluation. \n\n </string>
    <string name="antimicrobial_link">http://wwwnc.cdc.gov/eid/article/14/11/07-0467_intro</string>

    <!-- Immunizations for URIs -->
    <string name="immunizations">Immunizations</string>
    <string name="influenza">Influenza</string>
    <string name="pneumonococcal">Pneumonococcal</string>
    <string name="tdap">TDaP</string>


    <!-- Treatment Algorithms for URIs -->
    <string name="algorithms">Treatment Algorithms</string>
    <string name="adults">Adults</string>
    <string name="children">Children</string>
    <string name="adult_algorithm_title">Adult URI \n Treatment Algorithms</string>
    <string name="child_algorithm_title">Child URI \n Treatment Algorithms</string>
    <string name="pharyngitis">Pharyngitis</string>
    <string name="acute">Acute Sinusitis/Rhinosinusitis</string>
    <string name="cough">Cough Illness/Bronchitis</string>
    <string name="pneumonia">Community Acquired Pneumonia</string>
    <string name="adults_phar">Adults: Pharyngitis</string>
    <string name="adult_strep_title">Group A Strep Management in Adults</string>
    <string name="adult_viral_title">Viral Pharyngitis Management in Adults</string>
    <string name="adult_acute">Acute Sinusitis/Rhinosinusitis in Adults</string>
    <string name="adult_acute_mild_title">Acute Sinusitis Management &lt; 10 Days</string>
    <string name="adult_acute_severe_title">Acute Sinusitis Management &gt; 10 Days</string>
    <string name="adult_cough">Cough Illness/Bronchitis in Adults</string>
    <string name="adult_cough_mild_title">Management of Acute Cough in Adults</string>
    <string name="adult_cough_severe_title">Management of Chronic Cough in Adults</string>
    <string name="adult_cap">Community Acquired Pneumonia in Adults</string>
    <string name="adult_cap_manage_title">Management of CAP in Adults</string>

    <string name="child_phar">Children: Pharyngitis</string>
    <string name="child_strep_title">Group A Strep Management in Children</string>
    <string name="child_viral_title">Viral Pharyngitis Management in Children</string>
    <string name="child_acute">Acute Sinusitis/Rhinosinusitis in Children</string>
    <string name="child_acute_mild_title">Acute Sinusitis Management &lt; 10 Days</string>
    <string name="child_acute_severe_title">Acute Sinusitis Management &gt; 10 Days</string>
    <string name="child_cough">Cough Illness/Bronchitis in Children</string>
    <string name="child_cough_mild_title">Management of Acute Cough in Children</string>
    <string name="child_cough_severe_title">Management of Chronic Cough in Children</string>
    <string name="child_cap">Community Acquired Pneumonia in Children</string>
    <string name="child_cap_manage_title">Management of CAP in Children</string>


    <!-- References -->
    <string name="references">References</string>


    <!-- Test Screen -->
    <string name="test">Antibiotic Resistance and Prevention</string>
    <string name="test_content"> \t Add some paragraphs about how these crazy drugs work.\n
        Have you watched "interstellar" yet? The movie is freaking awesome!
        The part where they land on that planet and the waves were like "woosh" and "waash".
        Then they were stuck there for like an hour but every hour was 7 hours on Earth
        and when they got back everyone got old and it was crazy!\n
        Oh also the end when we find out all the supernatural things were actually created by
        humans from the future? OMG!!\n
        Well, hope I did not spoil the movie for you. Ohohohohoh!\n
        Which movie do you think is better? \n
        Interstellar or Inception? \n
        How about... \n
        Interstellar and Dark Knight? \n
        Let me know what you think </string>


</resources>
