<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:paddingLeft="@dimen/content_horizontal_margin"
    android:paddingRight="@dimen/content_horizontal_margin"
    android:paddingTop="@dimen/content_vertical_margin"
    android:paddingBottom="@dimen/content_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TextView
        android:text="@string/child_algorithm_title"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@android:color/background_light"
        android:textAlignment="gravity"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/pharyngitis"
        android:textColor="@android:color/background_light"
        android:layout_marginBottom="15dp"
        android:onClick="phar_click"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/acute"
        android:textColor="@android:color/background_light"
        android:layout_marginBottom="15dp"
        android:onClick="acute_click"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/cough"
        android:textColor="@android:color/background_light"
        android:layout_marginBottom="15dp"
        android:onClick="cough_click"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/pneumonia"
        android:textColor="@android:color/background_light"
        android:layout_marginBottom="15dp"
        android:onClick="cap_click"/>

    <Button
        android:background="@drawable/menu_button"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/back_to_main"
        android:textSize="12sp"
        android:layout_marginTop="50dp"
        android:id="@+id/main"
        android:layout_gravity="center_horizontal"
        android:onClick="back_to_main"/>

</LinearLayout>