<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:paddingLeft="@dimen/content_horizontal_margin"
    android:paddingRight="@dimen/content_horizontal_margin"
    android:paddingTop="@dimen/content_vertical_margin"
    android:paddingBottom="12dp"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:orientation="vertical">

<!--
    <ImageView
        android:src="@drawable/game_of_tone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal" />
        -->

    <TextView
        android:text="@string/aware"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@android:color/holo_green_light"
        android:layout_gravity="top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:id="@+id/testtext"
        android:gravity="center" />

    <TextView
        android:text="@string/aware_description"
        android:textSize="18sp"
        android:textColor="@android:color/background_light"
        android:layout_gravity="top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/use_of_antibiotics"
        android:textColor="@android:color/background_light"
        android:layout_marginBottom="15dp"
        android:id="@+id/use_of_antibiotics"
        android:onClick="use_click"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/media"
        android:textColor="@android:color/background_light"
        android:layout_marginBottom="15dp"
        android:id="@+id/media"
        android:onClick="media_click"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/tract_infections"
        android:textColor="@android:color/background_light"
        android:layout_marginBottom="15dp"
        android:id="@+id/tract_infections"
        android:onClick="infection_click"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/resistance"
        android:textColor="@android:color/background_light"
        android:layout_marginBottom="15dp"
        android:id="@+id/resistance"
        android:onClick="resistance_click"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/antimicrobial"
        android:textColor="@android:color/background_light"
        android:layout_marginBottom="15dp"
        android:id="@+id/antimicrobial"
        android:onClick="antimicrobial_click"/>

    <Button
        android:background="@drawable/menu_button"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="Back to Main"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:id="@+id/main"
        android:layout_gravity="center_horizontal"
        android:onClick="back_to_main"/>

</LinearLayout>