<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:paddingLeft="@dimen/content_horizontal_margin"
    android:paddingRight="@dimen/content_horizontal_margin"
    android:paddingTop="@dimen/content_vertical_margin"
    android:paddingBottom="12dp"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:orientation="vertical">

<!--
    <ImageView
        android:src="@drawable/game_of_tone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal" />
        -->

    <TextView
        android:text="@string/aware_intro"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@android:color/background_light"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center" />

    <TextView
        android:text="@string/aware_intro_content"
        android:textSize="18sp"
        android:textColor="@android:color/background_light"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:maxLines="16"
        android:scrollbars="vertical"
        android:clickable="true"
        android:onClick="aware_intro_click"
        android:id="@+id/aware_intro_content"/>

    <TextView
        android:text="@string/aware_intro_link"
        android:textSize="18sp"
        android:textColor="@android:color/background_light"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:autoLink="web"
        android:id="@+id/antimicrobial_link"/>

</LinearLayout>